# Kahoot_clone

./: .gitignore  README.md
klient/: .gitignore  README.txt  app.js  package-lock.json  package.json
klient/public/: constData.js  handleData.js  index.html  output.css  script.js
serwer_kahoot/: CMakeLists.txt  Makefile  README.txt  a.out  serwer  serwer-all-functions-in-one-file.cpp  serwer.cpp
serwer_kahoot/functions/: check_if_next_question.hpp  check_if_user_in_game.hpp  check_nickname_availability.hpp  data_structurs.hpp  game_create.hpp  handle_connection.hpp  handle_data.hpp  menage_points.hpp  owner_rejon.hpp  owner_start_lobby.hpp  player_join_rejoin_game.hpp  print_games.hpp  question_to_json.hpp  send_data_rank.hpp  send_players_answer_to_owner.hpp  send_questions_or_endofgame.hpp  serwer.cpp  start_game_send_player_to_lobby.hpp
serwer_kahoot/include/: check_if_next_question.hpp  check_if_user_in_game.hpp  check_nickname_availability.hpp  const_data.hpp  data_structurs.hpp  game_create.hpp  handle_connection.hpp  handle_data.hpp  menage_points.hpp  message_queue.hpp  owner_rejon.hpp  owner_start_lobby.hpp  player_join_rejoin_game.hpp  print_games.hpp  question_to_json.hpp  send_data_rank.hpp  send_players_answer_to_owner.hpp  send_questions_or_endofgame.hpp  start_game_send_player_to_lobby.hpp
serwer_kahoot/src/: check_if_next_question.cpp  check_if_user_in_game.cpp  check_nickname_availability.cpp  game_create.cpp  handle_connection.cpp  handle_data.cpp  menage_points.cpp  message_queue.cpp  owner_rejon.cpp  owner_start_lobby.cpp  player_join_rejoin_game.cpp  question_to_json.cpp  send_data_rank.cpp  send_players_answer_to_owner.cpp  send_questions_or_endofgame.cpp  start_game_send_player_to_lobby.cpp
